crates/llvmkit-ir/tests/compile_fail/module_pipeline_step_rejects_raw_string.rs
use llvmkit_ir::FunctionPipelineStep;

fn main() {
    let _ = FunctionPipelineStep::Pass("dce");
}
