crates/llvmkit-ir/tests/compile_fail/module_pipeline_step_rejects_raw_string.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/module_pipeline_step_rejects_raw_string.rs:4:40
  |
4 |     let _ = FunctionPipelineStep::Pass("dce");
  |             -------------------------- ^^^^^ expected `PassName<FunctionPassScope>`, found `&str`
  |             |
  |             arguments to this enum variant are incorrect
  |
  = note: expected struct `PassName<FunctionPassScope>`
          found reference `&'static str`
note: tuple variant defined here
 --> src/pass_pipeline.rs
  |
  |     Pass(PassName<FunctionPassScope>),
  |     ^^^^
